# fitness-backend

./: .dockerignore  .env.example  .gitignore  .railway-deploy  APPLY_MIGRATIONS.md  APPLY_REAL_WORLD_FOODS.md  CLAUDE.md  COMPREHENSIVE_ESTIMATION_SYSTEM.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_CORS_FIX.md  Dockerfile  GARMIN_FIX_COMPLETE.md  GARMIN_TABLE_FIX.md  GARMY_MIGRATION.md  INTELLIGENT_ESTIMATION_COMPLETE.md  MEAL_ESTIMATION_UPDATE.md  MEAL_LOGGING_FIXES_COMPLETE.md  NUTRITION_BUG_FIX.md  PATTERN_BASED_ESTIMATION.md  README.md  SECURITY.md  THE_LINE.md  UNIT_CONVERSION_SYSTEM.md  WORLD_CLASS_IMPROVEMENTS.md  apply_migration.py  check_foods_db.py  check_table.sql  deploy_to_railway.bat  docker-compose.yml  main.py  next.config.ts  package-lock.json  package.json  pyproject.toml  quick_test.py  railway.toml  requirements.txt  requirements.txt.backup  tailwind.config.js  (+10 more)
wagner_coach/fitness-backend/: Dockerfile  README.md  nixpacks.toml  pyproject.toml  pytest.ini  requirements.txt  start.sh  verify_setup.py
wagner_coach/fitness-backend/.github/workflows/: test.yml
wagner_coach/fitness-backend/app/: config.py  main.py
wagner_coach/fitness-backend/app/services/: coach_service.py  coach_service_interface.py  context_builder.py  embedding_service.py  garmin_service.py  meal_parser_service.py  program_service.py  quick_entry_service.py  rag_service.py
wagner_coach/fitness-backend/docs/design/: summarization.md  supabase_service.md
wagner_coach/fitness-backend/docs/testing/: config_test.md  supabase_service_test.md
wagner_coach/fitness-backend/migrations/: 001_phase1_database_rag_foundation.sql  004_multimodal_vector_database.sql  README.md  current.sql
wagner_coach/fitness-backend/scripts/: complete_all_features.py  generate_remaining_features.py
wagner_coach/fitness-backend/tests/: conftest.py
wagner_coach/fitness-backend/tests/integration/: test_coach_api_increment1.py
wagner_coach/fitness-backend/tests/unit/: test_auth.py  (+5 more)
(+387 files in other folders)
